# Wicked-Compiler

./: .gitignore  .gitpod.yml  .travis.yml  CMakeLists.txt  README.md  build_mac.sh  build_win.cmd  compiler.c  compiler.h  generate_parser.sh  generator.c  generator.h  generator_arrays.c  generator_class.c  generator_enum.c  generator_expressions.c  generator_functions.c  generator_if.c  generator_modules.c  generator_statements.c  generator_symbols.c  generator_variables.c  generator_while.c  grammar.txt  main.c  sonar-project.properties  string_functions.c  string_functions.h  test.txt  test.wckd  test2.wckd  wicked.grammar
.github/workflows/: cmake.yml  codeql-analysis.yml  sonar.yml
include/wickedc/: wickedc.h
playground/: io.funk  io.funk.fasm  io.wckd  module1.funk  module1.funk.fasm  module1.wckd  out.funk  out.funk.fasm  test.wckd
sandbox/: out.funk  out.funk.fasm  test.wckd  test2.wckd
src/: main.c  version.h
src/libwickedc/: compiler.c  wicked.grammar
src/libwickedc/generators/: generator.c  generator.h  generator_arrays.c  generator_class.c  generator_enum.c  generator_expressions.c  generator_functions.c  generator_if.c  generator_modules.c  generator_statements.c  generator_symbols.c  generator_variables.c  generator_while.c
src/libwickedc/mpc/: mpc.c  mpc.h
stdlib/: CMakeLists.txt  array.wckd
test/: CMakeLists.txt  arrays.spec.cpp  basic.spec.cpp  classes.spec.cpp  comparisons.spec.cpp  enums.spec.cpp  frontend.cpp  frontend.h  functions.spec.cpp  if.spec.cpp  loops.spec.cpp  main.cpp  maps.spec.cpp  numerical_expressions.spec.cpp  sane.cpp  sane.spec.cpp  scopes.spec.cpp  strings.spec.cpp  testlib.fasm
tools/: generate_parser.sh
